<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"/>


    </androidx.appcompat.widget.Toolbar>

    // fundo boas vindas

    <ImageView
        android:id="@+id/iv_greetings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/redPrimary"
        app:layout_constraintDimensionRatio="16:5.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    // boas vindas

    <TextView
        android:id="@+id/tv_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/greeting"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/iv_greetings"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/tv_greeting"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginLeft="6dp" />

    // agência e conta

    <TextView
        android:id="@+id/tv_agencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_greeting"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/agency"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/tv_num_agencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/agency_number"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tv_greeting"
        app:layout_constraintStart_toEndOf="@id/tv_agencia"
        android:layout_marginStart="5dp" />

    <TextView
        android:id="@+id/tv_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="16dp"
        android:text="@string/account"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_greeting"
        app:layout_constraintStart_toEndOf="@id/tv_num_agencia"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/tv_num_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_greeting"
        app:layout_constraintStart_toEndOf="@id/tv_conta"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/account_number"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginStart="5dp" />

    // saldo

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_saldo"
        android:layout_width="0dp"
        android:layout_height="240dp"
        app:layout_constraintTop_toBottomOf="@id/tv_agencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_saldo_disponivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_update_black_24dp"
                android:layout_margin="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_saldo_disponivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/iv_saldo_disponivel"
                app:layout_constraintTop_toTopOf="@id/iv_saldo_disponivel"
                app:layout_constraintBottom_toBottomOf="@id/iv_saldo_disponivel"
                android:layout_margin="16dp"
                android:text="@string/total_balance"
                android:textColor="@color/black"
                android:textSize="22sp"/>

            <ImageView
                android:id="@+id/iv_expand_less"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_expand_less_black_24dp"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/tv_cifrao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_symbol"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="28sp"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintTop_toBottomOf="@id/iv_saldo_disponivel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_num_saldo"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/tv_num_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/tv_cifrao"
                app:layout_constraintTop_toBottomOf="@id/iv_saldo_disponivel"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/tv_saldo_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_cifrao"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/balance_limit"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/tv_cifrao_saldo_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_cifrao"
                app:layout_constraintStart_toEndOf="@id/tv_saldo_limite"
                app:layout_constraintBottom_toBottomOf="@id/tv_saldo_limite"
                android:text="@string/balance_limit_sign"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/tv_num_saldo_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_cifrao"
                app:layout_constraintStart_toEndOf="@id/tv_cifrao_saldo_limite"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="5dp"
                android:text="@string/balance_limit_value"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="5dp" />

            <View
                android:id="@+id/view_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo_limite"
                app:layout_constraintBottom_toBottomOf="@id/tv_extrato"/>

            <TextView
                android:id="@+id/tv_extrato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_statement"
                android:textSize="18sp"
                android:textColor="@color/redSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_divider"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    // pagar

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_pagar"
        android:layout_width="115dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/card_saldo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/card_transferir"
        android:layout_marginLeft="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_payments_black_24dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_pagar"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@id/iv_pagar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    // transferir

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_transferir"
        android:layout_width="115dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/card_saldo"
        app:layout_constraintStart_toEndOf="@id/card_pagar"
        app:layout_constraintEnd_toStartOf="@id/card_recarga">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_local_atm_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_transferir"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/tv_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transfer"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/iv_transferir"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    // recarga

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_recarga"
        android:layout_width="115dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/card_saldo"
        app:layout_constraintStart_toEndOf="@id/card_transferir"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_recarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_system_update_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_recarga"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/tv_recarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recharge"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/iv_recarga"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    // cartão final

    <ImageView
        android:id="@+id/iv_final_cartao"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/redPrimary"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/card_pagar"/>

    <TextView
        android:id="@+id/tv_final_cartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_digits"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@id/iv_final_cartao"
        app:layout_constraintTop_toTopOf="@id/iv_final_cartao"
        app:layout_constraintBottom_toBottomOf="@id/iv_final_cartao"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/tv_num_final_cartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_digits_value"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@id/tv_final_cartao"
        app:layout_constraintTop_toTopOf="@id/iv_final_cartao"
        app:layout_constraintBottom_toBottomOf="@id/iv_final_cartao"
        android:layout_marginStart="10dp" />

    <ImageView
        android:id="@+id/iv_expand_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_expand_more_white_24dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="@id/iv_final_cartao"
        app:layout_constraintTop_toTopOf="@id/iv_final_cartao"
        app:layout_constraintBottom_toBottomOf="@id/iv_final_cartao"/>

</androidx.constraintlayout.widget.ConstraintLayout>